@@ -20,9 +20,11 @@ package org.apache.cassandra.testing;
 
 import java.math.BigInteger;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import org.apache.cassandra.distributed.api.TokenSupplier;
+import org.apache.cassandra.sidecar.adapters.base.Partitioner;
 
 /**
  * Static factory holder that provides a token supplier
@@ -38,7 +40,8 @@ public class TestTokenSupplier
     /**
      * Tokens are allocation used in tests to simulate token allocation nodes for an approx even distribution
      * in a multiDC environment with neighboring nodes different DCs allocated adjacent tokens.
-     * Allocations for new nodes are interleaved among existing tokens.
+     * Allocations for new nodes are interleaved among existing tokens. Usings the Murmur3 Partitioner to allocate
+     * tokens.
      *
      * @param numNodesPerDC    number of nodes from a single DC
      * @param newNodesPerDC    number of additional nodes for a DC
@@ -48,13 +51,37 @@ public class TestTokenSupplier
      */
     public static TokenSupplier evenlyDistributedTokens(int numNodesPerDC, int newNodesPerDC, int numDcs, int numTokensPerNode)
     {
+        return evenlyDistributedTokens(Partitioner.Murmur3, numNodesPerDC, newNodesPerDC, numDcs, numTokensPerNode);
+    }
+
+    /**
+     * Tokens are allocation used in tests to simulate token allocation nodes for an approx even distribution
+     * in a multiDC environment with neighboring nodes different DCs allocated adjacent tokens.
+     * Allocations for new nodes are interleaved among existing tokens.
+     *
+     * @param partitioner      the partitioner to use for token allocation
+     * @param numNodesPerDC    number of nodes from a single DC
+     * @param newNodesPerDC    number of additional nodes for a DC
+     * @param numDcs           no. of datacenters
+     * @param numTokensPerNode no. tokens allocated to each node (this is always 1 if there are no vnodes)
+     * @return The token supplier that vends the tokens
+     */
+    public static TokenSupplier evenlyDistributedTokens(Partitioner partitioner,
+                                                        int numNodesPerDC,
+                                                        int newNodesPerDC,
+                                                        int numDcs,
+                                                        int numTokensPerNode)
+    {
         // Use token count using initial node count to first assign tokens to nodes
         long totalTokens = (long) (numNodesPerDC) * numDcs * numTokensPerNode;
         // Similar to Cassandra TokenSupplier, the increment is doubled to account for all tokens from MIN - MAX.
         // For multi-DC, since neighboring nodes from different DCs have consecutive tokens, the increment is
         // broadened by a factor of numDcs.
-        BigInteger increment = BigInteger.valueOf(((Long.MAX_VALUE / (totalTokens + 2)) * 2 * numDcs));
-        List<String>[] tokens = allocateExistingNodeTokens(numNodesPerDC,
+        BigInteger increment = partitioner.maxToken.subtract(partitioner.minToken.add(BigInteger.ONE))
+                                                   .multiply(BigInteger.valueOf(numDcs))
+                                                   .divide(BigInteger.valueOf(totalTokens + 2));
+        List<String>[] tokens = allocateExistingNodeTokens(partitioner,
+                                                           numNodesPerDC,
                                                            newNodesPerDC,
                                                            numDcs,
                                                            numTokensPerNode,
@@ -62,7 +89,7 @@ public class TestTokenSupplier
 
 
         // Initial value of the first new node
-        BigInteger value  = new BigInteger(tokens[(numDcs - 1)].get(0));
+        BigInteger value = new BigInteger(tokens[(numDcs - 1)].get(0));
         BigInteger subIncrement = increment.divide(BigInteger.valueOf(2));
 
         int nodeId = (int) totalTokens + 1;
@@ -84,19 +111,17 @@ public class TestTokenSupplier
         return (nodeIdx) -> tokens[nodeIdx - 1];
     }
 
-    private static List<String>[] allocateExistingNodeTokens(int numNodesPerDC,
+    private static List<String>[] allocateExistingNodeTokens(Partitioner partitioner,
+                                                             int numNodesPerDC,
                                                              int newNodesPerDC,
                                                              int numDcs,
                                                              int numTokensPerNode,
                                                              BigInteger increment)
     {
         List<String>[] tokens = new List[(numNodesPerDC + newNodesPerDC) * numDcs];
-        for (int i = 0; i < ((numNodesPerDC + newNodesPerDC) * numDcs); ++i)
-        {
-            tokens[i] = new ArrayList(numTokensPerNode);
-        }
+        Arrays.setAll(tokens, ignored -> new ArrayList<>(numTokensPerNode));
 
-        BigInteger value = BigInteger.valueOf(Long.MIN_VALUE + 1);
+        BigInteger value = partitioner.minToken.add(BigInteger.ONE);
 
         int nodeId = 1;
         for (int i = 0; i < numTokensPerNode; ++i)
